# ultrasurf

./: .gitignore  README  README.md  build.sh  findParticles.m  objectAccounter.m  teste.m  trim.m  writeData.m
src/: CMakeLists.txt  Particle.cpp  Particle.hpp  accountParticles.cpp  accountParticles.hpp  circle.m  circularity.m  createSubmatrix.m  cut_object.m  diam_dist.m  edge_canny.m  findVoid.m  getObjectVelocity.m  getObjects.m  getParticles.cpp  getParticles.hpp  getSizeAndPosition.m  globVector.cpp  globVector.hpp  imaverage.m  interface.m  main.cpp  num2dec.m  pre_process.m  searchMatch.m  separateInterface.m  surround.m  writeFrame.m
src/gui/: GuiElements.py  index.py
