cmake_minimum_required(VERSION 2.8)
project( ultrasurf )
find_package( OpenCV REQUIRED )
add_executable( accountParticles main.cpp )
add_library( particleLibrary Particle.cpp globVector.cpp getParticles.cpp)
target_link_libraries( particleLibrary ${OpenCV_LIBS} )
target_link_libraries( accountParticles particleLibrary )
target_link_libraries( accountParticles ${OpenCV_LIBS} )
