cmake_minimum_required(VERSION 2.8)
project( ultrasurf )
find_package( OpenCV REQUIRED )
add_executable( accountParticles accountParticles.cpp )
add_library( UltraSurf Particle.cpp globVector.cpp getParticles.cpp)
target_link_libraries( UltraSurf ${OpenCV_LIBS} )
target_link_libraries( accountParticles UltraSurf )
target_link_libraries( accountParticles ${OpenCV_LIBS} )
